add cart validation
