# src/components/cart/controllers/cart.controller.ts
@@ -2,16 +2,19 @@ import { inject, injectable } from 'inversify';
 import TYPES from '../../../constants/type';
 import express from 'express';
 import logger from '../../../utils/logger';
-import ApiError from '../../../middlewares/error-handling.middleware';
 import { ICartService } from '../services/cart.interface.service';
 import { ICartCreateDto } from '../models/cart-create.model';
-import { ICartDto } from '../models/cartDto.model';
+import { ICartDto } from '../models/cart-dto.model';
 
 @injectable()
 export class CartController {
   constructor(@inject(TYPES.ICartService) private cartService: ICartService) {}
 
-  public async get(req: express.Request, res: express.Response) {
+  public async get(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const { email } = req.query;
 
@@ -21,11 +24,15 @@ export class CartController {
       res.status(200).json(cart);
     } catch (err) {
       logger.error(`get cart: ${err}`);
-      throw new ApiError(500, 'Internal Server Error');
+      next(err);
     }
   }
 
-  async addToCart(req: express.Request, res: express.Response) {
+  async addToCart(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const cartCreateDto: ICartCreateDto = req.body;
 
@@ -34,11 +41,16 @@ export class CartController {
 
       res.status(200).json(newCart);
     } catch (err) {
-      res.status(503).send(err);
+      logger.error(`add to cart: ${err}`);
+      next(err);
     }
   }
 
-  async updateCartQuantity(req: express.Request, res: express.Response) {
+  async updateCartQuantity(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const { id } = req.params;
       const { quantity } = req.body;
@@ -51,24 +63,34 @@ export class CartController {
 
       res.status(200).json(updatedCart);
     } catch (err) {
-      res.status(503).send(err);
+      logger.error(`update cart quantity: ${err}`);
+      next(err);
     }
   }
 
-  async clearCart(req: express.Request, res: express.Response) {
+  async clearCart(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const { email } = req.query;
 
-      logger.info('Remove item from cart');
+      logger.info('Clear Cart');
       await this.cartService.clearCart(String(email));
 
       res.status(200).json({ message: 'Remove item from cart successfully' });
     } catch (err) {
-      res.status(503).send(err);
+      logger.error(`Clear Cart: ${err}`);
+      next(err);
     }
   }
 
-  async deleteItem(req: express.Request, res: express.Response) {
+  async deleteItem(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const { id } = req.params;
 
@@ -77,11 +99,16 @@ export class CartController {
 
       res.status(200).json({ message: 'Remove item from cart successfully' });
     } catch (err) {
-      res.status(503).send(err);
+      logger.error(`Remove item from cart: ${err}`);
+      next(err);
     }
   }
 
-  async checkout(req: express.Request, res: express.Response) {
+  async checkout(
+    req: express.Request,
+    res: express.Response,
+    next: express.NextFunction,
+  ) {
     try {
       const { email } = req.query;
 
@@ -90,7 +117,8 @@ export class CartController {
 
       res.status(200).json({ message: 'Checkout successfully' });
     } catch (err) {
-      res.status(503).send(err);
+      logger.error(`get: ${err}`);
+      next(err);
     }
   }
 }
