# src/components/cart/validation/update-quantity-validation.ts
@@ -1,0 +1,12 @@
+import { Schema } from 'express-validator';
+
+export const updateCartValidation: Schema = {
+  id: {
+    in: ['params'],
+    notEmpty: true,
+  },
+  quantity: {
+    in: ['body'],
+    notEmpty: true,
+  },
+};
